tests/baselines/reference/typeGuardsWithInstanceOf.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts(7,20): error TS2339: Property 'global' does not exist on type 'never'.
  The type 'never' was reduced from the intersection 'I & RegExp'. Each type of that intersection has properties that conflict, so values of that type can never exist.


==== tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts (1 errors) ====
    interface I { global: string; }
    var result: I;
    var result2: I;
    
    if (!(result instanceof RegExp)) {
        result = result2;
    } else if (!result.global) {
                       ~~~~~~
!!! error TS2339: Property 'global' does not exist on type 'never'.
!!! error TS2339:   The type 'never' was reduced from the intersection 'I & RegExp'. Each type of that intersection has properties that conflict, so values of that type can never exist.
    }